<resources>
    <string name="app_name">Safe Noise Canceling</string>
    <string name="caution">주의</string>
    <string name="warning">경고</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">홈</string>
    <string name="title_history">기록</string>
    <string name="title_setting">설정</string>

    <!-- Splash -->
    <string name="splash_app_name">Safe\nNoise\nCanceling</string>
    <string name="splash_text">Feel the convenience.\nFeel the freedom.\nAnd feel the safety.</string>

    <!-- Fragment Main -->
    <string name="fragment_main_mystate">My State</string>
    <string name="fragment_main_nearbysoundlevel">주변 소리 크기</string>
    <string name="fragment_main_soundlevel">%1$s dB</string>

    <!-- Activity -->
    <string-array name="activity">
        <item>이동 수단</item>
        <item>자전거</item>
        <item>도보</item>
        <item>정지</item>
        <item>알 수 없음</item>
        <item>기기 기울어짐</item>
        <item>알 수 없음</item>
        <item>걷기</item>
        <item>뛰기</item>
    </string-array>

    <!-- Decibel -->
    <string-array name="decibel">
        <item>매우 조용함</item>
        <item>나뭇잎 소리</item>
        <item>속삭이는 소리</item>
        <item>조용한 도서관</item>
        <item>조용한 사무실</item>
        <item>대화 소리</item>
        <item>혼잡한 차도</item>
        <item>혼잡한 거리</item>
        <item>공구 소음</item>
    </string-array>


    <!-- Permission String -->
    <string name="permission_req_msg">Application의 전체 기능을 이용하시려면 권한 허용이 필요합니다.</string>
    <string name="permission_denied">권한 허용이 이루어지지 않아 Application 이용이 제한됩니다. 설정에서 권한을 허용해주세요.</string>

    <!-- Service -->
    <string name="soundservice_noti_channel">감지 작동중 알림</string>
    <string name="soundservice_noti_title">Safe Noise Canceling</string>
    <string name="soundservice_noti_msg">Safe Noise Canceling 서비스가 작동중입니다.</string>

    <string name="soundservice_warning_channel">안전 경고 알림</string>
    <string name="soundservice_warning_title">안전 경고</string>
    <string name="soundservice_warning_msg">주변에서 위험한 소리가 감지되었습니다!</string>

    <!-- History -->
    <string name="history_msg">모든 기록은 사용자의 기기에만 저장됩니다!</string>
    <string name="history_type">%1$s (%2$s%% 일치)</string>

    <!-- Setting -->
    <string name="setting_enable">서비스 활성화</string>
    <string name="setting_mediaoff">미디어 일시정지</string>
    <string name="setting_mediaoff_description">위험이 감지되면 미디어 (노래, 영상 등) 재생을 일시정지합니다.</string>
    <string name="setting_subwaydetect">지하철 안내 방송 감지</string>
    <string name="setting_subwaydetect_description">지하철 안내 방송이 감지되면 볼륨을 일시적으로 줄입니다.</string>
    <string name="setting_notisetting">알림 설정</string>
    <string name="setting_calibration">마이크 보정</string>
    <string name="setting_calibration_msg">정말 재보정을 하시겠습니까?\n보정하는 동안은 위험 소리 인식이 불가능하며, 무조건 보정을 완료해야 합니다!</string>
    <string name="setting_resethistory">인식 기록 초기화</string>
    <string name="setting_resethistory_dialog_msg">정말 모든 기록을 삭제하시겠습니까?\n삭제 후에는 다시 복구할 수 없습니다!</string>
    <string name="setting_classifyperiod">인식 주기 설정</string>
    <string name="setting_classifyperiod_msg">인식 주기가 짧을수록 배터리 사용량이 증가합니다.</string>
    <string name="setting_classifyperiod_min">짧음</string>
    <string name="setting_classifyperiod_max">김</string>
    <string name="setting_classifyperiod_label">%1$s초</string>
    <string name="setting_micthreshold">마이크 민감도 설정</string>
    <string name="setting_micthreshold_min">민감</string>
    <string name="setting_micthreshold_max">둔감</string>
    <string name="setting_author">해당 앱은 연구용으로, 실제 사용에 대한 모든 책임은 사용자에게 있습니다.\n가천대학교 소프트웨어학과 졸업작품 프로젝트\n5분반 7조 (김나형, 박다정, 선민재)\n2021.3 ~ 2022.6</string>

    <!-- Calibration -->
    <string name="calibration_title">마이크 보정</string>
    <string name="calibration_msg">보다 나은 인식을 위해 30초 간 마이크 보정이 필요합니다.\n\n주변 환경을 최대한 조용하게 해주시고,\n다른 소리를 내지 않도록 주의해주세요.\n\n음성은 저장되지 않습니다.</string>
    <string name="calibration_start_button">보정 시작하기</string>
    <string name="calibration_finish">보정이 끝났습니다.</string>
    <string name="calibration_bottom_msg_ready">보정 버튼을 눌러주세요.</string>
    <string name="calibration_bottom_msg_during">보정을 진행하고 있습니다..</string>
</resources>